# auth-system

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO.md  build.sh  example_db.json  script.sh
examples/: config.json
examples/postgres/: config.json  example_data.sql  mock_data.sql  table_destroyer.sql  table_initializer.sql  user_data_structure.sql
examples/postgres-config/: config.json
include/: auth.hpp  status.hpp
include/auth/: response.hpp  status_codes.hpp
src/: CMakeLists.txt  README.md  auth.cpp  auth.hpp  connection  connection.cpp  connection.hpp  database.cpp  database.h  database.hpp  main.cpp  response.hpp  user.cpp  user.h  user.hpp  utils.cpp  utils.h  utils.hpp
src/DBClient/: connection.h
src/DBClient/Mock/: MockConnection.cpp  MockConnection.h
src/cli/: README.md  connection.h  connection.hpp
src/connection/: CMakeLists.txt  base.cpp  base.hpp  postgresql.cpp  postgresql.hpp
src/db_clients/: CMakeLists.txt  connection.cpp  connection.hpp  postgresql_connection.cpp
src/db_clients/mock/: MockConnection.hpp
tools/: setup
